[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Max Davidson <davidsonmax@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
pcre2 = "0.2.3"
regex = "1.5.5"
